tests/invalid/VarDecl_Invalid_1.whiley
method main() -> int:
    int x = y
    return x
